Fixed slider, and optimize alignments

--- a/styles.css
+++ b/styles.css
@@ -18,18 +18,20 @@ header {
 }
 
 .logo img {
-    height: 40px;
+    height: 80px;
+    position: relative;
+    left: 35px;
 }
 
 nav ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 30px;
     display: flex;
 }
 
 nav li {
-    margin-left: 20px;
+    margin-left: 25px;
 }
 
 nav a {
@@ -84,18 +86,20 @@ main {
 .slide img {
     width: 100%;
     height: auto;
+    border-radius: 15px; /* Added round edges */
 }
 
 .overlay {
     position: absolute;
-    bottom: 15%;
+    bottom: 10%; /* Moved title down to be 10% from the bottom */
     right: 15%;
-    background: rgba(0, 0, 0, 0.5);
     color: #fff;
     padding: 5px 10px;
-    font-size: 1.4em;
+    font-size: 1.8em; /* Increased font size */
     font-weight: 300;
     text-transform: uppercase;
+    letter-spacing: 0.1em; /* Added letter spacing */
+    background: none; /* Removed background */
 }
 
 button.prev, button.next {
@@ -132,14 +136,14 @@ footer {
 
 footer ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    margin: -5px;
+    padding: 20px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 
 footer li {
-    margin: 0 10px;
+    margin-left: 25px;
 }
 
 footer a {
